--- a/plugin.yaml
+++ b/plugin.yaml
@@ -1,9 +1,9 @@
-name: "mask-secrets"
+name: "mask"
 version: "0.0.1"
 usage: "mask secrets data in helm dry-run"
 description: |-
   This plugin masks secret data for Helm charts in the rendered manifest.
-  See `helm mask-secrets --help` for usage.
+  See `helm mask --help` for usage.
 ignoreFlags: false
 command: '$HELM_PLUGIN_DIR/mask.sh'
 platformCommand:
